// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="sc-iDRUQT izIXaI"
  dir="ltr"
>
  <div />
</div>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="sc-iDRUQT izIXaI"
  dir="ltr"
>
  <div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ NoVrw"
        disabled={false}
      >
        <input
          className="sc-eZkcaX kjRHRl"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kjRHRl"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kjRHRl"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kjRHRl"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="sc-iDRUQT ivYSXE"
  dir="ltr"
>
  <div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ NoVrw"
        disabled={false}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={true}
          id="auth-code-part-4"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZgkGA lfAHqK"
    >
      <div
        className="sc-dDaJoQ GYDHa"
        disabled={true}
      >
        <input
          className="sc-eZkcaX kBGJNX"
          dir="ltr"
          disabled={true}
          id="auth-code-part-5"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-ciicml eaZYzL"
      data-testid="undefined-error"
    >
      <p
        className="sc-hZiMVj eKDjdK"
        color="chiChi.100"
        size={12}
      >
        Provided value is not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="sc-iDRUQT izIXaI"
  dir="ltr"
>
  <div />
</div>
`;
